# MediaInfoLib

./: .appveyor.yml  .gitignore  .lgtm.yml  .travis.yml  Changes.txt  History_DLL.txt  License.html  README.md
.github/workflows/: MediaInfoLib_Checks.yml
Contrib/: MediaInfo.pro  ReadMe.qmake
Project/BCB/: MediaInfoLib_Proj.groupproj
Project/CMake/: CMakeLists.txt  MediaInfo.rc  MediaInfoSetupOptions.cmake  libmediainfo.pc.in
Project/Coverity/: coverity.bat
Project/GNU/: PKGBUILD  libmediainfo.dsc  libmediainfo.spec
Project/Gem/: mediainfolib.gemspec
Project/Java/: ReadMe.txt
Project/JavaScript/: ReadMe.txt  package.json
Project/MSCS2010/: MediaInfoLib_MSCS.sln
Project/MSVB2010/: MediaInfoLib_MSVB.sln
Project/MSVC2013/: MediaInfoLib.sln
Project/MSVC2015/: MediaInfoLib.sln
Project/MSVC2017/: MediaInfoLib.sln  MediaInfoLib_UWP.sln
Project/MSVC2019/: MediaInfoLib.sln  MediaInfoLib_UWP.sln
Project/MSVC2022/: MediaInfoLib.sln  MediaInfoLib_UWP.sln
Project/MSVC2026/: MediaInfoLib.slnx  MediaInfoLib_UWP.slnx
Project/Mac/: BR_extension_SO.sh  Make_tarball.sh  build_SO.sh  mktarball.sh
Project/OBS/: deb12.dsc  deb6.dsc  deb9.dsc  u12.04.dsc
Project/Qt/: MediaInfoLib.pro  ReadMe.txt
Project/Solaris/: mkpkg
Project/iOS/: build.sh
Project/zlib/: Compile.sh
Project/zlib/projects/GNU/: Makefile.am  configure.ac
Release/: Build_DLL_Windows.ps1  CleanUp.bat  Example.dxw  PrepareSource.sh  ReadMe_DLL_Linux.txt  ReadMe_DLL_Mac.txt  ReadMe_DLL_Windows.txt  Release_DLL_Android.sh  Release_DLL_GNU.sub  Release_DLL_GNU_FromSource.sh  Release_DLL_GNU_Prepare.bat  Release_DLL_Windows.ps1  Release_DLL_Windows_ARM64.bat  Release_DLL_Windows_i386.bat  Release_DLL_Windows_x64.bat  Release_Lib_GNU_FromSource.sh  Release_Lib_GNU_Prepare.bat  Release_Source.bat  UpdateMediaInfoLib.sh  UpgradeVersion.sh
Source/AndroidLib/: build.gradle  settings.gradle
Source/Example/: HowToUse_Dll.cpp  HowToUse_Dll.html  HowToUse_Dll.java  HowToUse_Dll.ps1  HowToUse_Dll.py  HowToUse_Dll.rb  HowToUse_Dll3.py  HowToUse_Dll_AndroidWebView.txt
Source/Install/: MediaInfo_DLL_Windows_ARM64.nsi  (+2 more)
Source/Node/: README.md  (+4 more)
debian/: changelog  control  copyright  libmediainfo0.symbols  python3-mediainfodll.install  rules  watch
(+509 files in other folders)
