AUTOMAKE_OPTIONS = foreign

lib_LTLIBRARIES = libz.la
libz_la_SOURCES = \
                       adler32.c \
                       compress.c \
                       crc32.c \
                       deflate.c \
                       gzio.c \
                       inffast.c \
                       inflate.c \
                       infback.c \
                       inftrees.c \
                       trees.c \
                       uncompr.c \
                       zutil.c


